--- a/index.scss
+++ b/index.scss
@@ -147,10 +147,37 @@ body {
   }
 
   .gallery {
-    .slide {
+    .slides {
       width: 100%;
       height: 445px;
       font-style: italic;
+      position: relative;
+      overflow: hidden;
+
+      .slide1 {
+        position: absolute;
+        top: 0;
+        left: 0;
+        transition: left 0.5s ease-in;
+      }
+
+      .slide2 {
+        position: absolute;
+        top: 0;
+        left: 100%;
+        width: 100%;
+        transition: left 0.5s ease-in;
+      }
+
+      &:hover {
+        .slide1 {
+          left: -100%;
+        }
+
+        .slide2 {
+          left: 0;
+        }
+      }
 
       h1,h2 {
         box-sizing: border-box;
@@ -160,7 +187,7 @@ body {
 
       h1 {
         position: absolute;
-        top: 388px;
+        top: 360px;
         color: #222;
         background: #FFF;
         font-size: 1.2em;
@@ -170,7 +197,7 @@ body {
 
       h2 {
         position: absolute;
-        top: 428px;
+        top: 400px;
         color: #E9E9E9;
         font-size: 1em;
         height: 30px;
