--- a/index.scss
+++ b/index.scss
@@ -180,6 +180,7 @@ body {
       }
 
       h1,h2 {
+        font-weight: normal;
         box-sizing: border-box;
         padding: 0 10px;
         margin: 0;
