--- a/index.scss
+++ b/index.scss
@@ -146,6 +146,7 @@ body {
       font-style: italic;
 
       h1,h2 {
+        font-weight: normal;
         box-sizing: border-box;
         padding: 0 10px;
         margin: 0;
@@ -153,7 +154,7 @@ body {
 
       h1 {
         position: absolute;
-        top: 388px;
+        top: 360px;
         color: #222;
         background: #FFF;
         font-size: 1.2em;
@@ -163,7 +164,7 @@ body {
 
       h2 {
         position: absolute;
-        top: 428px;
+        top: 400px;
         color: #E9E9E9;
         font-size: 1em;
         height: 30px;
