--- a/index.scss
+++ b/index.scss
@@ -1,4 +1,42 @@
-div {
-  font-size: 22px;
-  color: #48e;
+@import "~normalize-scss/sass/normalize/import-now";
+
+html, body, div, h1, h2, h3, h4, h5, ul, li, p, section,
+nav, footer, header, article {
+  box-sizing: border-box;
+}
+
+ul, li {
+  list-style: none;
+}
+
+body {
+  width: 1080px;
+  height: 100%;
+  margin: 0 auto;
+}
+
+#wrap {
+  width: 100%;
+  height: 100%;
+  border: 1px solid black;
+  padding: 1px;
+  display: flex;
+  justify-content: space-between;
+}
+
+#menu {
+  width: 160px;
+  height: 1000px;
+  border: 1px solid blue;
+}
+
+#content {
+  width: 900px;
+  height: 1000px;
+  border: 1px solid red;
+}
+
+footer {
+  height: 60px;
+  border: 1px solid orange;
 }
