Step 4: Add logo to menu.

--- a/index.scss
+++ b/index.scss
@@ -28,6 +28,19 @@ body {
   width: 160px;
   height: 1000px;
   border: 1px solid blue;
+  text-align: center;
+
+
+  #logo {
+    img {
+      width: 120px;
+      height: 120px;
+    }
+  }
+
+  ul {
+    padding: 0;
+  }
 }
 
 #content {
