Step 6: refine style of contacts.

--- a/index.scss
+++ b/index.scss
@@ -54,6 +54,48 @@ body {
       }
     }
   }
+
+  #contacts {
+    h1 {
+      font-size: 12px;
+      font-weight: normal;
+      text-transform: uppercase;
+      text-align: left;
+      border-bottom: 1px dashed #AAA;
+      padding-bottom: 5px;
+    }
+
+    button {
+      border: 1px solid #AAA;
+      background: white;
+      color: #34AC98;
+      font-size: 11px;
+      height: 30px;
+      width: 100%;
+      border-radius: 5px;
+      cursor: pointer;
+
+      &:hover {
+        background: #EFF8F7;
+      }
+
+      i {
+        vertical-align: middle;
+      }
+    }
+
+    p {
+      text-align: left;
+      font-style: italic;
+      font-size: 12px;
+
+    }
+
+    .contact-item {
+      margin-bottom: 20px;
+      padding: 0 10px;
+    }
+  }
 }
 
 #content {
