--- a/index.scss
+++ b/index.scss
@@ -42,15 +42,37 @@ body {
     padding: 0;
 
     li {
-      font-size: 18px;
-      color: #34AC98;
-      font-style: italic;
       text-align: left;
       line-height: 1.5em;
-      padding-left: 30px;
+      padding-left: 50px;
+      margin-bottom: 15px;
+      position: relative;
+
+      span {
+        font-size: 18px;
+        color: #34AC98;
+        font-style: italic;
+        transition: all 0.5s ease;
+      }
+
+      i {
+        position: absolute;
+        top: 0;
+        left: 10px;
+        font-size: 26px;
+        margin-right: 10px;
+        vertical-align: middle;
+        transition: all 0.2s ease-in;
+      }
 
       &:hover {
-        color: #EC6635;
+        span {
+          color: #EC6635;
+        }
+
+        i {
+          left: 20px;
+        }
       }
     }
   }
@@ -107,4 +129,9 @@ body {
 footer {
   height: 60px;
   border: 1px solid orange;
+}
+
+[class^="icon"] {
+  font-family: "iconfont";
+  font-style: normal;
 }
