--- a/index.scss
+++ b/index.scss
@@ -1,7 +1,7 @@
 @import "~normalize-scss/sass/normalize/import-now";
 
 html, body, div, h1, h2, h3, h4, h5, ul, li, p, section,
-nav, footer, header, article {
+nav, footer, header, article, img {
   box-sizing: border-box;
 }
 
@@ -27,7 +27,7 @@ body {
 
 #menu {
   width: 160px;
-  height: 1000px;
+  min-height: 1000px;
   border: 1px solid blue;
   text-align: center;
 
@@ -123,7 +123,7 @@ body {
 
 #content {
   width: 900px;
-  height: 1000px;
+  min-height: 1000px;
   border: 1px solid red;
   overflow: hidden;
   position: relative;
@@ -247,6 +247,62 @@ body {
 
         &:active {
           box-shadow: #4FB7A6 0 0 7px;
+        }
+      }
+    }
+  }
+}
+
+.blog {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
+
+  article {
+    flex-basis: 23%;
+
+    a {
+      text-decoration: none;
+
+      &:hover {
+        img {
+          opacity: 0.8;
+        }
+
+        h1 {
+          color: #EC6635;
+        }
+      }
+    }
+
+    h1 {
+      text-transform: capitalize;
+      font-size: 18px;
+      font-weight: normal;
+      color: #34AC98;
+    }
+
+    img {
+      width: 100%;
+      height: 130px;
+      padding: 10px;
+      border: 1px solid #AAA;
+    }
+
+    p {
+      font-size: 14px;
+    }
+
+    .meta {
+      font-size: 16px;
+      color: #AAA;
+
+      a {
+        color: #34AC98;
+        border-bottom: 1px dashed #AAA;
+
+        &:hover {
+          color: #EC6635;
         }
       }
     }
