--- a/index.scss
+++ b/index.scss
@@ -1,4 +1,10 @@
-div {
-  font-size: 22px;
-  color: #48e;
+@import "~normalize-scss/sass/normalize/import-now";
+
+html, body, div, h1, h2, h3, h4, h5, ul, li, p, section,
+nav, footer, header, article {
+  box-sizing: border-box;
+}
+
+ul, li {
+  list-style: none;
 }
