--- a/index.scss
+++ b/index.scss
@@ -8,3 +8,36 @@ nav, footer, header, article {
 ul, li {
   list-style: none;
 }
+
+body {
+  width: 1180px;
+  height: 100%;
+  margin: 0 auto;
+  padding: 50px;
+}
+
+#wrap {
+  width: 100%;
+  height: 100%;
+  border: 1px solid black;
+  padding: 1px;
+  display: flex;
+  justify-content: space-between;
+}
+
+#menu {
+  width: 160px;
+  height: 1000px;
+  border: 1px solid blue;
+}
+
+#content {
+  width: 900px;
+  height: 1000px;
+  border: 1px solid red;
+}
+
+footer {
+  height: 60px;
+  border: 1px solid orange;
+}
