--- a/index.scss
+++ b/index.scss
@@ -331,7 +331,7 @@ footer {
       border-right: 1px solid #AAA;
       vertical-align: middle;
       text-align: center;
-      font-size: 14px;
+      font-size: 11px;
 
       &:hover {
         color: #EC6635;
@@ -500,6 +500,62 @@ footer {
       article {
         flex-basis: 45%;
         margin-bottom: 20px;
+      }
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  body {
+    width: 320px;
+    padding: 0px;
+  }
+
+  #menu {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-content: center;
+    padding: 0px;
+    margin-bottom: 20px;
+
+    nav {
+      ul {
+        width: 100%;
+        border-bottom: 1px solid #E5E5E5;
+        margin: 10px 0px;
+      }
+      li {
+        width: auto;
+        padding: 5px;
+        margin-bottom: 0;
+      }
+    }
+  }
+
+  #content {
+    width: 320px;
+
+    .gallery {
+      .slides {
+        height: 160px;
+      }
+    }
+
+    .subscribe {
+      .tip {
+        width: 250px;
+      }
+    }
+
+    .blog {
+      justify-content: center;
+      article {
+        flex-basis: 90%;
+
+        img {
+          height: 170px;
+        }
       }
     }
   }
