--- a/index.scss
+++ b/index.scss
@@ -34,6 +34,45 @@ body {
     }
   }
 
+  ul {
+    padding: 0;
+
+    li {
+      text-align: left;
+      line-height: 1.5em;
+      padding-left: 50px;
+      margin-bottom: 15px;
+      position: relative;
+
+      span {
+        font-size: 18px;
+        color: #34AC98;
+        font-style: italic;
+        transition: all 0.5s ease;
+      }
+
+      i {
+        position: absolute;
+        top: 0;
+        left: 10px;
+        font-size: 26px;
+        margin-right: 10px;
+        vertical-align: middle;
+        transition: all 0.2s ease-in;
+      }
+
+      &:hover {
+        span {
+          color: #EC6635;
+        }
+
+        i {
+          left: 20px;
+        }
+      }
+    }
+  }
+
   #contacts {
     h1 {
       font-size: 12px;
@@ -80,15 +119,13 @@ body {
 #content {
   width: 900px;
   height: 1000px;
-
-  i {
-    font-size: 24px;
-  }
 }
 
 footer {
   height: 60px;
 }
 
-
-@import './assets/iconfonts/style.css';
+[class^="icon"] {
+  font-family: "iconfont";
+  font-style: normal;
+}
