--- a/index.css
+++ b/index.css
@@ -1,26 +1,27 @@
-div{
-	padding: 30px;
-	margin: 30px;
-}
+body{
+	background-color:#f2f7b5;
 
-body > div{
-	width: 30%;
-	color: white;
-	background-color:#eee;
-	height:300px;
-	display: inline-block;
-	border:1px solid #ccc;
-}
+	& > div{
+		width: 30%;
+		color: white;
+		background-color:#eee;
+		height:300px;
+		display: inline-block;
+		border:1px solid #ccc;
+		padding: 30px;
+		margin: 30px;
+	}
 
-.normal{}
-.special{
-	border-radius: 10px;
-	background-image: -moz-linear-gradient(top, #eeeeee, #cccccc);
-  background-image: -webkit-linear-gradient(top, #eeeeee, #cccccc);
-  background-image: -moz-linear-gradient(top, #eeeeee, #cccccc);
-  background-image: -ms-linear-gradient(top, #eeeeee, #cccccc);
-  background-image: -o-linear-gradient(top, #eeeeee, #cccccc);
-	box-shadow: 0px 2px 5px #999;
-	-webkit-box-shadow: 0px 2px 5px #999;
-	border: none;
+	.special{
+		border-radius: 10px;
+		background-image: -moz-linear-gradient(top, #eeeeee, #cccccc);
+	  background-image: -webkit-linear-gradient(top, #eeeeee, #cccccc);
+	  background-image: -moz-linear-gradient(top, #eeeeee, #cccccc);
+	  background-image: -ms-linear-gradient(top, #eeeeee, #cccccc);
+	  background-image: -o-linear-gradient(top, #eeeeee, #cccccc);
+		background-image: linear-gradient(top, #eeeeee, #cccccc);
+		box-shadow: 0px 2px 5px #999;
+		-webkit-box-shadow: 0px 2px 5px #999;
+		border: none;
+	}
 }
