--- a/index.css
+++ b/index.css
@@ -1,6 +1,5 @@
-div{
-	padding: 30px;
-	margin: 30px;
+body{
+	background-color:#f2f7b5;
 }
 
 body > div{
@@ -10,30 +9,16 @@ body > div{
 	height:300px;
 	display: inline-block;
 	border:1px solid #ccc;
+	padding: 30px;
+	margin: 30px;
 }
 
 .normal{}
 .special{
 	border-radius: 10px;
 	background-image: -moz-linear-gradient(top, #eeeeee, #cccccc);
-  background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #eeeeee),color-stop(1, #cccccc));
   background-image: -webkit-linear-gradient(top, #eeeeee, #cccccc);
   background-image: -moz-linear-gradient(top, #eeeeee, #cccccc);
   background-image: -ms-linear-gradient(top, #eeeeee, #cccccc);
   background-image: -o-linear-gradient(top, #eeeeee, #cccccc);
 }
-
-/*#top{
-	background-color:#ccc;
-
-	div{
-		background-color: blue;
-	}
-}
-
-#bottom{
-	background-color: #ccc;
-	div {
-		background-color: green;
-	}
-}*/
