--- a/index.css
+++ b/index.css
@@ -14,14 +14,14 @@ body{
 
 	.special{
 		border-radius: 10px;
-		background-image: -moz-linear-gradient(top, #eeeeee, #cccccc);
-	  background-image: -webkit-linear-gradient(top, #eeeeee, #cccccc);
-	  background-image: -moz-linear-gradient(top, #eeeeee, #cccccc);
-	  background-image: -ms-linear-gradient(top, #eeeeee, #cccccc);
-	  background-image: -o-linear-gradient(top, #eeeeee, #cccccc);
-		background-image: linear-gradient(top, #eeeeee, #cccccc);
+		background-image: linear-gradient(to bottom, #eeeeee, #cccccc);
 		box-shadow: 0px 2px 5px #999;
-		-webkit-box-shadow: 0px 2px 5px #999;
 		border: none;
 	}
 }
+
+/*background-image: -moz-linear-gradient(top, #eeeeee, #cccccc);
+background-image: -webkit-linear-gradient(top, #eeeeee, #cccccc);
+background-image: -moz-linear-gradient(top, #eeeeee, #cccccc);
+background-image: -ms-linear-gradient(top, #eeeeee, #cccccc);
+background-image: -o-linear-gradient(top, #eeeeee, #cccccc);*/
