--- a/index.css
+++ b/index.css
@@ -1,7 +1,48 @@
-.test{
-	border:1px solid blue;
+body{
+	background-color:#f2f7b5;
 
-	span {
-		border:1px solid red;
+	& > div{
+		width: 30%;
+		color: white;
+		background-color:#eee;
+		height:300px;
+		display: inline-block;
+		border:1px solid #ccc;
+		padding: 30px;
+		margin: 30px;
+		color:black;
+	}
+
+	a {
+  color: #900;
+  text-decoration: none;
+	}
+
+	a:hover {
+	  color: red;
+	  position: relative;
+	}
+
+	a[title]:hover:after {
+  content: attr(title);
+  padding: 4px 8px;
+  color: #333;
+  position: absolute;
+  left: 0;
+  top: 100%;
+  white-space: nowrap;
+  z-index: 20px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  -moz-box-shadow: 0px 0px 4px #222;
+  -webkit-box-shadow: 0px 0px 4px #222;
+  box-shadow: 0px 0px 4px #222;
+  background-image: -moz-linear-gradient(top, #eeeeee, #cccccc);
+  background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #eeeeee),color-stop(1, #cccccc));
+  background-image: -webkit-linear-gradient(top, #eeeeee, #cccccc);
+  background-image: -moz-linear-gradient(top, #eeeeee, #cccccc);
+  background-image: -ms-linear-gradient(top, #eeeeee, #cccccc);
+  background-image: -o-linear-gradient(top, #eeeeee, #cccccc);
 	}
 }
