--- a/index.css
+++ b/index.css
@@ -1,7 +1,25 @@
-.test{
-	border:1px solid blue;
+button{
+	margin-left: 200px;
+}
 
-	span {
-		border:1px solid red;
+#divWithTriangle{
+	display: none;
+	margin-top:20px;
+	padding: 30px;
+	border:1px solid green;
+	background-color: #CCC;
+	width: 30%;
+	position: relative;
+
+	&:after{
+		content: "";
+		position:absolute;
+		width: 0;
+		height: 0;
+		left:48%;
+		top:-10px;
+		border:none;
+		border: 5px solid transparent;
+		border-bottom:5px solid green;
 	}
 }
