--- a/index.scss
+++ b/index.scss
@@ -5,14 +5,16 @@
 
 .content {
     padding: 30px 0;
-
     .tips {
         font-size: 13px;
         color: #778899;
         text-align: center;
         margin-bottom: 20px;
     }
-
+    #download {
+        display: none;
+        color: #2070DC;
+    }
     #imageWrap {
         display: flex;
         width: 500px;
@@ -21,12 +23,8 @@
         align-items: center;
         justify-content: center;
         border: 1px dashed #778899;
-
-        #imageViewer {
+        #canvas {
             display: block;
-            max-width: 100%;
-            max-height: 100%;
         }
-
     }
 }
