--- a/index.scss
+++ b/index.scss
@@ -1,7 +1,7 @@
 @import './style/mixins';
 
 html, body, div, h1, h2, h3, h4, h5, ul, li, p, section,
-nav, footer, header, article {
+nav, footer, header, article, img {
   box-sizing: border-box;
 }
 
@@ -120,7 +120,7 @@ body {
 
 #content {
   width: 900px;
-  height: 1000px;
+  min-height: 1000px;
   position: relative;
 	overflow: hidden;
 
@@ -184,6 +184,47 @@ body {
     @include activeSlide('#radio-3', '#labelForRadio-3');
     @include activeSlide('#radio-4', '#labelForRadio-4');
 	}
+
+	.subscribe {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 0 10px;
+    margin: 30px 0px;
+    border-top: 1px dashed #AAA;
+    border-bottom: 1px dashed #AAA;
+
+    i {
+      font-size: 28px;
+      width: 30px;
+    }
+
+    .tip {
+      font-size: 12px;
+      width: 400px;
+    }
+
+    form {
+      width: 400px;
+      input[type="email"] {
+        width: 66%;
+        box-shadow: 1px 0px 0px 0px #AAA;
+      }
+      input[type="button"] {
+        width: 25%;
+				margin-left: 5%;
+        border-radius: 5px;
+        background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #fff), color-stop(1, #ddd));
+        outline: none;
+        border: 1px solid;
+        border-color: #ddd #bbb #999;
+
+        &:active {
+          box-shadow: #4FB7A6 0 0 7px;
+        }
+      }
+    }
+  }
 }
 
 footer {
