css3-demo6-4 init

--- a/index.scss
+++ b/index.scss
@@ -1,5 +1,3 @@
-@import './style/mixins';
-
 html, body, div, h1, h2, h3, h4, h5, ul, li, p, section,
 nav, footer, header, article, img {
   box-sizing: border-box;
@@ -16,278 +14,10 @@ body {
   padding: 50px;
 }
 
-#wrap {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: space-between;
-}
-
-#menu {
-  width: 160px;
-  height: 1000px;
-  text-align: center;
-
-
-  #logo {
-    img {
-      width: 120px;
-      height: 120px;
-    }
-  }
-
-  ul {
-    padding: 0;
-
-    li {
-      text-align: left;
-      line-height: 1.5em;
-      padding-left: 50px;
-      margin-bottom: 15px;
-      position: relative;
-
-      span {
-        font-size: 18px;
-        color: #34AC98;
-        font-style: italic;
-        transition: all 0.5s ease;
-      }
-
-      i {
-        position: absolute;
-        top: 0;
-        left: 10px;
-        font-size: 26px;
-        margin-right: 10px;
-        vertical-align: middle;
-        transition: all 0.2s ease-in;
-      }
-
-      &:hover {
-        span {
-          color: #EC6635;
-        }
-
-        i {
-          left: 20px;
-        }
-      }
-    }
-  }
-
-  #contacts {
-    h1 {
-      font-size: 12px;
-      font-weight: normal;
-      text-transform: uppercase;
-      text-align: left;
-      border-bottom: 1px dashed #AAA;
-      padding-bottom: 5px;
-    }
-
-    button {
-      border: 1px solid #AAA;
-      background: white;
-      color: #34AC98;
-      font-size: 11px;
-      height: 30px;
-      width: 100%;
-      border-radius: 5px;
-      cursor: pointer;
-
-      &:hover {
-        background: #EFF8F7;
-      }
-
-      i {
-        vertical-align: middle;
-      }
-    }
-
-    p {
-      text-align: left;
-      font-style: italic;
-      font-size: 12px;
-
-    }
-
-    .contact-item {
-      margin-bottom: 20px;
-      padding: 0 10px;
-    }
-  }
-}
-
-#content {
-  width: 900px;
-  min-height: 1000px;
-  position: relative;
-	overflow: hidden;
-
-	.slides {
-    position: relative;
-    top: 0;
-    height: 450px;
-    width: 400%;
-    transition: left 0.5s ease-in;
-
-    img {
-      float: left;
-      width: 25%;
-      height: 100%;
-    }
-  }
-
-
-	.gallery {
-		input[type="radio"] {
-      display: none;
-    }
-
-		nav {
-      ul {
-        display: flex;
-        padding: 0;
-        margin: 0;
-
-        li {
-          flex-basis: 25%;
-          padding: 0;
-          margin: 0;
-          width: 100%;
-          height: 60px;
-          line-height: 60px;
-          border-right: 1px solid #D3EDE9;
-
-          &:last-child {
-            border-right: none;
-          }
-
-          label {
-            display: block;
-            background: #EFF8F7;
-            font-size: 18px;
-            color: #34AC98;
-            text-align: center;
-          }
-        }
-      }
-    }
-		
-		@include slide('#radio-1', 0);
-    @include slide('#radio-2', -100%);
-    @include slide('#radio-3', -200%);
-    @include slide('#radio-4', -300%);
-
-    @include activeSlide('#radio-1', '#labelForRadio-1');
-    @include activeSlide('#radio-2', '#labelForRadio-2');
-    @include activeSlide('#radio-3', '#labelForRadio-3');
-    @include activeSlide('#radio-4', '#labelForRadio-4');
-	}
-
-	.subscribe {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    padding: 0 10px;
-    margin: 30px 0px;
-    border-top: 1px dashed #AAA;
-    border-bottom: 1px dashed #AAA;
-
-    i {
-      font-size: 28px;
-      width: 30px;
-    }
-
-    .tip {
-      font-size: 12px;
-      width: 400px;
-    }
-
-    form {
-      width: 400px;
-      input[type="email"] {
-        width: 66%;
-        box-shadow: 1px 0px 0px 0px #AAA;
-      }
-      input[type="button"] {
-        width: 25%;
-				margin-left: 5%;
-        border-radius: 5px;
-        background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #fff), color-stop(1, #ddd));
-        outline: none;
-        border: 1px solid;
-        border-color: #ddd #bbb #999;
-
-        &:active {
-          box-shadow: #4FB7A6 0 0 7px;
-        }
-      }
-    }
-  }
-
-	.blog {
-		display: flex;
-		justify-content: space-between;
-		margin-bottom: 30px;
-
-		article {
-			flex-basis: 23%;
-
-			a {
-				text-decoration: none;
-
-				&:hover {
-					img {
-						opacity: 0.8;
-					}
-
-					h1 {
-						color: #EC6635;
-					}
-				}
-			}
-
-			h1 {
-				text-transform: capitalize;
-				font-size: 18px;
-				font-weight: normal;
-				color: #34AC98;
-			}
-
-			img {
-				width: 100%;
-				height: 130px;
-				padding: 10px;
-				border: 1px solid #AAA;
-			}
-
-			p {
-				font-size: 14px;
-			}
-
-			.meta {
-				font-size: 16px;
-				color: #AAA;
-
-				a {
-					color: #34AC98;
-					border-bottom: 1px dashed #AAA;
-
-					&:hover {
-						color: #EC6635;
-					}
-				}
-			}
-		}
-	}
-}
-
-footer {
-  height: 60px;
-}
-
 [class^="icon"] {
   font-family: "iconfont";
   font-style: normal;
 }
+
+@import './style/app';
+@import './style/responsive';
