--- a/style/_responsive.scss
+++ b/style/_responsive.scss
@@ -40,3 +40,53 @@
     }
   }
 }
+
+@media (max-width: 900px) {
+    body {
+      width: 800px;
+      padding: 40px;
+    }
+
+    #wrap {
+      flex-direction: column;
+    }
+
+    #menu {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+      height: 150px;
+      padding: 20px;
+
+    #contacts {
+      display: none;
+    }
+
+    ul {
+      display: flex;
+
+      li {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0;
+        width: 100px;
+
+        i {
+          position: relative;
+          top: 0;
+          left: 0;
+          margin-right: 0;
+          margin-bottom: 10px;
+        }
+
+        &:hover {
+          i {
+            left: 0;
+          }
+        }
+      }
+    }
+  }
+}
