--- a/index.css
+++ b/index.css
@@ -1,7 +1,9 @@
-.test{
-	border:1px solid blue;
+body {
+	background: #000;
+	margin: 0;
+}
 
-	span {
-		border:1px solid red;
-	}
+canvas {
+	cursor: crosshair;
+	display: block;
 }
