--- a/index.scss
+++ b/index.scss
@@ -5,16 +5,14 @@
 
 .content {
     padding: 30px 0;
+
     .tips {
         font-size: 13px;
         color: #778899;
         text-align: center;
         margin-bottom: 20px;
     }
-    #download {
-        display: none;
-        color: #2070DC;
-    }
+
     #imageWrap {
         display: flex;
         width: 500px;
@@ -23,8 +21,12 @@
         align-items: center;
         justify-content: center;
         border: 2px dashed #778899;
-        #canvas {
+
+        #imageViewer {
             display: block;
+            max-width: 100%;
+            max-height: 100%;
         }
+
     }
 }
