--- a/index.scss
+++ b/index.scss
@@ -3,29 +3,42 @@
     margin: 0;
 }
 
+body {
+    padding-top: 40px;
+    background-color: #242424;
+}
+
 .content {
-    padding: 30px 0;
-
-    .tips {
-        font-size: 13px;
-        color: #778899;
-        text-align: center;
-        margin-bottom: 20px;
-    }
-
-    #imageWrap {
+    .box {
         display: flex;
-        width: 500px;
-        height: 350px;
-        margin: 0 auto;
-        align-items: center;
-        justify-content: center;
-        border: 2px dashed #778899;
-
-        #imageViewer {
-            display: block;
-            max-width: 100%;
-            max-height: 100%;
+        width: 100px;
+        height: 100px;
+        margin: 0 auto 30px;
+        padding: 10px;
+        border: 4px solid #E5E5E5;
+        border-radius: 10px;
+        justify-content: space-between;
+        background-color: #EEEEEE;
+        &.double {
+            .item:nth-child(2) {
+                align-self: flex-end;
+            }
+        }
+        &.quadra {
+            display: flex;
+            flex-wrap: wrap;
+            align-content: space-between;
+            .column {
+                flex-basis: 100%;
+                display: flex;
+                justify-content: space-between;
+            }
+        }
+        .item {
+            width: 27px;
+            height: 27px;
+            border-radius: 50%;
+            background-color: #999999;
         }
 
     }
