--- a/index.scss
+++ b/index.scss
@@ -21,16 +21,18 @@ body {
         background-color: #EEEEEE;
         &.double {
             .item:nth-child(2) {
+                align-self: center;
+            }
+            .item:nth-child(3) {
                 align-self: flex-end;
             }
         }
         &.quadra {
             display: flex;
-            flex-wrap: wrap;
             align-content: space-between;
             .column {
-                flex-basis: 100%;
                 display: flex;
+                flex-direction: column;
                 justify-content: space-between;
             }
         }
