--- a/index.scss
+++ b/index.scss
@@ -26,11 +26,10 @@ body {
         }
         &.quadra {
             display: flex;
-            flex-wrap: wrap;
             align-content: space-between;
             .column {
-                flex-basis: 100%;
                 display: flex;
+                flex-direction: column;
                 justify-content: space-between;
             }
         }
