--- a/style/_responsive.scss
+++ b/style/_responsive.scss
@@ -174,19 +174,19 @@
   }
 
   #content {
-    width: 320px;
-
-    .gallery {
-      .slides {
-        height: 160px;
-      }
-    }
-
-    .subscribe {
-      .tip {
-        width: 250px;
-      }
-    }
+    // width: 320px;
+    //
+    // .gallery {
+    //   .slides {
+    //     height: 160px;
+    //   }
+    // }
+    //
+    // .subscribe {
+    //   .tip {
+    //     width: 250px;
+    //   }
+    // }
 
     .blog {
       justify-content: center;
